[gd_scene load_steps=13 format=3 uid="uid://dv31ttuyw5rnf"]

[ext_resource type="Theme" uid="uid://ugxbtljmj80y" path="res://Assets/MainMenuTheme.tres" id="1_h5tew"]
[ext_resource type="Script" path="res://Scripts/MainMenuScript.gd" id="1_s2qbx"]
[ext_resource type="Texture2D" uid="uid://ba086fbet6wd5" path="res://Assets/MainMenu/LogoFreestylers.png" id="2_tuuka"]
[ext_resource type="FontFile" uid="uid://b7tnent1gr2u3" path="res://Assets/Fonts/Larceny.ttf" id="2_xpdlg"]
[ext_resource type="Texture2D" uid="uid://bqji7lspvjsm1" path="res://Assets/MainMenu/Twitter.png" id="3_hamnk"]
[ext_resource type="SpriteFrames" uid="uid://b4o4idok2krco" path="res://Assets/Sprites/Background/BackgroundAnimation.tres" id="3_iv8ij"]
[ext_resource type="Texture2D" uid="uid://cdqu35fo7lt8j" path="res://Assets/MainMenu/LogoGiftJam.png" id="4_kmo4h"]
[ext_resource type="Texture2D" uid="uid://c1pdlddf8ioi3" path="res://Assets/MainMenu/AttackTutorial.png" id="7_bc7y5"]
[ext_resource type="Texture2D" uid="uid://e6rqavtu14al" path="res://Assets/Sprites/Notas/Abajo.png" id="8_4tl2g"]
[ext_resource type="Texture2D" uid="uid://b5uwkw1cagosn" path="res://Assets/MainMenu/DefendTutorial.png" id="8_eefuj"]
[ext_resource type="Texture2D" uid="uid://vemclkghh0d8" path="res://Assets/Sprites/Notas/Arriba.png" id="9_d1qt2"]
[ext_resource type="Texture2D" uid="uid://dburth1bntu6x" path="res://Assets/Sprites/Notas/Derecha.png" id="10_fpce0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_h5tew")
script = ExtResource("1_s2qbx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(2.666, 2.666)
sprite_frames = ExtResource("3_iv8ij")
autoplay = "default"
frame_progress = 0.656875

[node name="FreeStylers" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 1071.0
offset_top = 555.0
offset_right = 1391.0
offset_bottom = 811.0
scale = Vector2(0.607021, 0.607021)
texture_normal = ExtResource("2_tuuka")

[node name="GiftJam" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 2.0
offset_top = 541.0
offset_right = 1502.0
offset_bottom = 1541.0
grow_vertical = 0
scale = Vector2(0.165439, 0.165439)
texture_normal = ExtResource("4_kmo4h")

[node name="Twitter" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 1105.0
offset_top = 440.0
offset_right = 1169.0
offset_bottom = 504.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("3_hamnk")

[node name="MainButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 255.0
offset_right = 858.0
offset_bottom = 547.0
alignment = 1

[node name="play" type="Button" parent="MainButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 60
text = "Jugar"

[node name="tutorial" type="Button" parent="MainButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 60
text = "Tutorial
"

[node name="Credits" type="Button" parent="MainButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 60
text = "Créditos"

[node name="level container" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 429.0
offset_top = 255.0
offset_right = 858.0
offset_bottom = 547.0
alignment = 1

[node name="level 1" type="Button" parent="level container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 60
text = "Jugar"

[node name="back" type="Button" parent="level container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 60
text = "  Cerrar  "

[node name="credits" type="Panel" parent="."]
visible = false
layout_mode = 2
offset_left = 360.0
offset_top = 175.0
offset_right = 920.0
offset_bottom = 547.0

[node name="container" type="MarginContainer" parent="credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="credits/container"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="credits/container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 32
text = "CREDITS
--------
Gonzalo cidoncha - EL NOTAS
DAVID CZEPIEL - EL MÁQUINA
PABLO GROSSI - EL ARTISTA
IGNACIO ORY - EL CAÓTICO
JOSE MARTÍN - EL FIESTERO
JAVIER ARIAS - EL GENIO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="credits/container/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 32
text = "------------"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="credits/container/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 32
text = "Gonzalo cidoncha - EL NOTAS
DAVID CZEPIEL - EL MÁQUINA
PABLO GROSSI - EL ARTISTA
IGNACIO ORY - EL CAÓTICO
JOSE MARTÍN - EL FIESTERO
JAVIER ARIAS - EL GENIO
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsBack" type="Button" parent="credits/container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 32
text = "Cerrar"

[node name="tutorial" type="Panel" parent="."]
visible = false
layout_mode = 2
offset_left = 148.0
offset_top = 24.0
offset_right = 1132.0
offset_bottom = 696.0

[node name="container" type="MarginContainer" parent="tutorial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="tutorial/container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25
alignment = 1

[node name="Label2" type="Label" parent="tutorial/container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 32
text = "TUTORIAL
------------
Ragnahilda, la más fiera de las guerreras que ha visto la FDI tiene que luchar.
Concretamente, por su aprobado

Para derrotar a sus viles \"profesores\" deberá combatir contra ellos.

Primero, tu oponente preparará una serie de movimientos (flechas)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="tutorial/container/VBoxContainer"]
position = Vector2(328, 301.5)
scale = Vector2(0.14, 0.14)
texture = ExtResource("8_4tl2g")

[node name="Sprite2D4" type="Sprite2D" parent="tutorial/container/VBoxContainer"]
position = Vector2(389, 301.5)
scale = Vector2(0.14, 0.14)
texture = ExtResource("9_d1qt2")

[node name="Sprite2D5" type="Sprite2D" parent="tutorial/container/VBoxContainer"]
position = Vector2(454, 301.5)
scale = Vector2(0.14, 0.14)
texture = ExtResource("10_fpce0")

[node name="Sprite2D6" type="Sprite2D" parent="tutorial/container/VBoxContainer"]
position = Vector2(516, 301.5)
scale = Vector2(0.14, 0.14)
texture = ExtResource("8_4tl2g")

[node name="Label4" type="Label" parent="tutorial/container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 32
text = "
En la fase de ataque, imita los movimientos para atacar a tu oponente."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D3" type="Sprite2D" parent="tutorial/container/VBoxContainer"]
position = Vector2(432, 404)
texture = ExtResource("7_bc7y5")

[node name="Label3" type="Label" parent="tutorial/container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 32
text = "

En la fase de defensa, haz el movimiento opuesto para esquivar sus golpes.



"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D2" type="Sprite2D" parent="tutorial/container/VBoxContainer"]
position = Vector2(432, 526)
texture = ExtResource("8_eefuj")

[node name="TutorialBack" type="Button" parent="tutorial/container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xpdlg")
theme_override_font_sizes/font_size = 32
text = "Cerrar"

[connection signal="button_down" from="FreeStylers" to="." method="_on_free_stylers_button_down"]
[connection signal="button_down" from="GiftJam" to="." method="_on_gift_jam_button_down"]
[connection signal="button_down" from="Twitter" to="." method="_on_twitter_button_down"]
[connection signal="button_down" from="MainButtonContainer/play" to="." method="TogglePlayMenu" binds= [true]]
[connection signal="button_down" from="MainButtonContainer/tutorial" to="." method="_on_tutorial_button_down"]
[connection signal="button_down" from="MainButtonContainer/Credits" to="." method="_on_credits_button_down"]
[connection signal="button_down" from="level container/level 1" to="." method="_on_level_button_down" binds= [0]]
[connection signal="button_down" from="level container/back" to="." method="TogglePlayMenu" binds= [false]]
[connection signal="button_down" from="credits/container/VBoxContainer/CreditsBack" to="." method="_on_credits_back_button_down"]
[connection signal="button_down" from="tutorial/container/VBoxContainer/TutorialBack" to="." method="_on_tutorial_back_button_down"]
